<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thinh.devpro.MainActivity"
    android:weightSum="1"
    android:orientation="vertical">



    <TextView
        android:hint="@string/tvNhapTen"
        android:textSize="22dp"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtNhapTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:hint="@string/tvNhapMatKhau"
        android:textSize="22dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtNhapMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDangNhap"/>
    <Button
        android:id="@+id/btnDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDangKy"/>
    <Button
        android:id="@+id/btnCaiDat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCaiDat"/>


</LinearLayout>
